<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:max="5"
        android:maxHeight=".5dp"
        android:maxWidth=".5dp"
        android:id="@+id/ratingBar"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/addRate"
        android:id="@+id/addRate"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColorHint="@color/colorAccent"
        android:layout_marginBottom="15dp">

        <EditText

            android:id="@+id/et_oponion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:hint="@string/yourOpnion"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent"
            />
    </android.support.design.widget.TextInputLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d3d3d3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_weight="1"
            android:id="@+id/add"
            style="@style/Widget.AppCompat.Button.Borderless"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="#d3d3d3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_weight="1"
            android:id="@+id/cancel"
            style="@style/Widget.AppCompat.Button.Borderless"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#d3d3d3"/>
</LinearLayout>