<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.brand.homestation.customer_activities.SendCoponActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                >
                <ImageView
                    android:layout_margin="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/back"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orderDetails"
                    android:textColor="#FFF"
                    android:id="@+id/title"
                    android:textStyle="bold"
                    android:layout_gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#fff"
        android:id="@+id/linear1">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/shipped"
            android:layout_margin="10dp"
            />
        <EditText
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/card_shape"
            android:hint="@string/orderAddress"
            android:id="@+id/orderAddress"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/mob"
            android:layout_margin="10dp"
            />
        <EditText
            android:layout_marginEnd="10dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/card_shape"
            android:hint="@string/contact"
            android:id="@+id/contact"/>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:orientation="vertical"
        android:layout_below="@+id/linear1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/scissors"
                android:layout_margin="10dp"
                />
            <TextView
                android:layout_margin="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/cobon"
                android:id="@+id/coupon"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/ifyouHave"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/ifyouHave"
            android:background="@drawable/edit_text_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom">
        <FrameLayout
            android:layout_width="wrap_content"
            android:background="@mipmap/button"
            android:layout_height="wrap_content"
            android:id="@+id/order">
            <TextView
                android:id="@+id/text"
                android:textColor="#fff"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orderNow"
                android:layout_gravity="center"/>
        </FrameLayout>
        <Button
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/orderNow"
            android:textColor="#fff"
            android:id="@+id/orderNow"

            android:textAlignment="center"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:textStyle="bold"
            android:textSize="20sp"
            android:id="@+id/total"/>
        <TextView
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="150 L.E"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/price"
            android:layout_marginStart="5dp"
            android:textColor="#750000"/>
    </LinearLayout>
    </RelativeLayout>
</LinearLayout>
