<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    tools:context="com.brand.homestation.customer_activities.FamiliesProdusesActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/back"
            android:layout_gravity="end|center"
            android:layout_margin="16dp"
            />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/discover"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="30dp"
        android:textSize="18sp"
        android:textColor="#5F331E"
        android:id="@+id/discover"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best"
            android:textStyle="bold"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:textSize="18sp"
            android:textColor="#5F331E"
            android:id="@+id/best"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"/>

        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_login"
            android:text="@string/map"
            android:textColor="#fff"
            android:layout_marginBottom="30dp"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginEnd="30dp"
            android:drawableLeft="@mipmap/back"
            android:paddingLeft="15dp"
            android:id="@+id/map"/>
    </LinearLayout>
</RelativeLayout>
