<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_1"
    android:orientation="vertical"
    tools:context="com.brand.homestation.activities.RegisterationActivity">



    <!--<ScrollView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent">-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="90dp"
            android:id="@+id/frame">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/userregister"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circular"
            android:layout_gravity="bottom|end" >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/addregister"
                android:layout_gravity="center"/>
        </FrameLayout>
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/frame"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="#454254"
                >

                <EditText
                    android:drawableLeft="@mipmap/userlogin"
                    android:paddingStart="10dp"
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/userName"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#5F331E"
                    android:textColorHint="#5F331E"
                    android:gravity="center"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="#454254"
                >

                <EditText
                    android:drawableLeft="@mipmap/email"
                    android:paddingStart="10dp"
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#5F331E"
                    android:textColorHint="#5F331E"

                    android:gravity="center"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="#454254"
                >

                <EditText
                    android:drawableLeft="@mipmap/mob"
                    android:paddingStart="10dp"
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#5F331E"
                    android:textColorHint="#5F331E"
                    android:gravity="center"
                    />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInput4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColorHint="#454254"
                >

                <EditText
                    android:gravity="center"
                    android:drawableLeft="@mipmap/passwordlogin"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:textColor="#5F331E"
                    android:textColorHint="#5F331E"
                    />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/check"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acceptTermsAndCondition"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:id="@+id/accept"/>
            </LinearLayout>
            
            <Button
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_login"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textColor="#fff"
                android:id="@+id/register"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/insta"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/registerWithInsta"
                    android:textColor="#000"
                    android:layout_marginStart="10dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:id="@+id/instaLogin"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <!--</ScrollView>-->
</LinearLayout>
